Closed Bug 1713564 Opened 4 years ago Closed 4 years ago

dom/events/EventDispatcher.cpp:1026:24: error: 'MakeScopeExit' was not declared in this scope

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P5)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- unaffected
firefox89 --- unaffected
firefox90 - fixed
firefox91 --- fixed

People

(Reporter: petr.sumbera, Assigned: petr.sumbera)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:88.0) Gecko/20100101 Firefox/88.0

Steps to reproduce:

Solaris build failed with:

 6:22.51 In file included from Unified_cpp_dom_events1.cpp:20:
 6:22.51 /builds/psumbera/mozilla-central-build/dom/events/EventDispatcher.cpp: In static member function 'static nsresult mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*)':
 6:22.51 /builds/psumbera/mozilla-central-build/dom/events/EventDispatcher.cpp:1026:24: error: 'MakeScopeExit' was not declared in this scope
 6:22.51  1026 |         auto cleanup = MakeScopeExit([&] {
 6:22.51       |                        ^~~~~~~~~~~~~

This is probably regression after Bug 1713023.

Keywords: regression
Regressed by: 1713023
Has Regression Range: --- → yes
Assignee: nobody → petr.sumbera

The Bugbug bot thinks this bug should belong to the 'Core::DOM: UI Events & Focus Handling' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → DOM: UI Events & Focus Handling
Product: Firefox → Core

Thanks, Petr, this has been last bit to make FF trunk building on ppc64le for me again.

Can confirm the same failure on OpenBSD:

In file included from Unified_cpp_dom_events1.cpp:20:
/usr/obj/ports/firefox-90.0beta1/firefox-90.0/dom/events/EventDispatcher.cpp:1026:24: error: use of undeclared identifier 'MakeScopeExit'
        auto cleanup = MakeScopeExit([&] {
                       ^
1 error generated.

will use the patch from Petr, thanks !

[Tracking Requested - why for this release]:

FTBFS on Tier-3 platforms without profiler ?

Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/1c110c9d06c3 add missing ScopeExit header r=glandium

Fwiw, on m-c see it seems there's another one:

12:02.37 /home/landry/src/m-c/dom/xhr/XMLHttpRequestMainThread.cpp:3050:22: error: use of undeclared identifier 'MakeScopeExit'
12:02.37     auto scopeExit = MakeScopeExit([&] {
12:02.37                      ^

mike, any idea where those are coming from ?

Flags: needinfo?(mh+mozilla)

ah this one landed in bug #1712930

Flags: needinfo?(mh+mozilla)

Fixes build failure on Tier3:
src/m-c/dom/xhr/XMLHttpRequestMainThread.cpp:3050:22: error: use of undeclared identifier 'MakeScopeExit'
auto scopeExit = MakeScopeExit([&] {
regressed by bug 1712930

Comment on attachment 9224627 [details]
Bug 1713564 - add missing ScopeExit header r?glandium

Revision D116560 was moved to bug 1714022. Setting attachment 9224627 [details] to obsolete.

Attachment #9224627 - Attachment is obsolete: true

Not tracking tier3 issues, sorry.

Priority: -- → P5

Comment on attachment 9224244 [details]
Bug 1713564 - add missing ScopeExit header

Beta/Release Uplift Approval Request

  • User impact if declined: FTBFS on tier3 platforms without profiler
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): tier3
  • String changes made/needed: none
Attachment #9224244 - Flags: approval-mozilla-beta?

(In reply to Julien Cristau [:jcristau] from comment #11)

Not tracking tier3 issues, sorry.

i dunno if the tracking flag is the same as setting approval-mozilla-beta, but please consider it :)

Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch

Comment on attachment 9224244 [details]
Bug 1713564 - add missing ScopeExit header

approved for 90.0b3

Attachment #9224244 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: