Bug 1713564 - add missing ScopeExit header. r=glandium, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D116354